Moved spline computations from phetcommon to common/spline since it depends on Jama
Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
11-29-2010: made ModelViewTransform and ImmutableVector2D use Point2D and Point2D.Double more appropriately
11-29-2010: added ImmutableVector2D.getDistance
11-19-2010: made Property<T>.getDefaultValue() protected so it doesn't appear in code completion
11-19-2010: added identity function that returns its input
11-19-2010: added ModelViewTransform see #123
11-17-2010: added NotProperty
11-17-2010: added AndProperty and IsSelectedProperty extensions of Property<T>
11-15-2010: added machine generated equals and hashcode for linear function
11-14-2010: made a private method in AbstractValueControl protected to allow override in functionality
11-12-2010: added a constructor to ConstantDTClock with a default number of frames per second
11-12-2010: added a constructor to ConstantDTClock that allows setting number of frames per second
11-11-2010: added removeModuleObserver to PhetApplication and ModuleManager
11-2-2010: added ability to specify color to PhetLineBorder
11-2-2010: added viewToModelDifferential( Dimension2D delta ) to ModelViewTransform2D
9-14-2010: Improved phetcommon's test for Mac OS X, see #2505
promoted PhetLineBorder to public top level class
Improvements to vector classes, see #2467
8-23-2010: simplified update logic in HTMLCheckBox
7-30-2010: Changed color of total force from pink to dark green, see #2452
7-29-2010: Added colors from PhET's color scheme based on the google spreadsheet
7-21-2010: Introduced Observable<T> class with MutableBoolean convenience subclass.
6-14-2010: Minor documentation change in Arrow
5-31-2010: Centralized creation of loggers and switch to anonymous loggers for use in the web start sandbox, see #2386
5-31-2010: LoggingUtils: Added the ConsoleHandler to the Logger before configuring it to avoid security exceptions, see #2386 