@@ -1,3 +1,4 @@
+Added PropertyRadioButton, which wires up a JRadioButton to a property of type T in an enum-style Property<T>.
 Moved spline computations from phetcommon to common/spline since it depends on Jama
 Moved spline computations from energy-skate-park to phetcommon for reuse in fluid-pressure-and-flow
 11-29-2010: made ModelViewTransform and ImmutableVector2D use Point2D and Point2D.Double more appropriately
